# zero2prod

./: .containerignore  .dockerignore  Cargo.toml  Containerfile  Dockerfile  Justfile  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
configuration/: production.yaml
migrations/: 20220112012637_create_subscriptions_table.sql  20220201135222_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs
