[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
config = "0.11"
actix-web = "4.0.0-beta.16"
tokio = { version="1", features = ["macros", "rt-multi-thread"]}
serde = { version = "1", features = ["derive"]}
uuid = { version = "0.8.1", features = ["v4"]}
chrono = "0.4.15"
env_logger = "0.9"

[dev-dependencies]
reqwest = "0.11.8"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
]