[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
config = "0.11.0"
actix-web = "4.0.0-beta.19"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.133", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.14"
serde-aux = "3"
tracing = { version = "0.1.29", features = ["log"] }
tracing-subscriber = { version = "0.3.5", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.2"

[dev-dependencies]
reqwest = "0.11.9"
once_cell = "1.9.0"

[dependencies.sqlx]
version = "0.5.10"
default-features = false
features = [
    "runtime-actix-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate",
    "offline"
]
